welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: type mismatch;
 found   : Boolean(false)
 required: Int
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)&&(c>=13 && c<=19)&&(d>=13 && d<=19)){return false}
                                                                                           ^countTeen:3: error: type mismatch;
 found   : Boolean(false)
 required: Int
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)&&(c>=13 && c<=19)||(d>=13 && d<=19)){return false}
                                                                                           ^countTeen:4: error: type mismatch;
 found   : Boolean(false)
 required: Int
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)||(c>=13 && c<=19)&&(d>=13 && d<=19)){return false}
                                                                                           ^countTeen:5: error: type mismatch;
 found   : Boolean(false)
 required: Int
	if ((a>=13 && a<=19)||(b>=13 && b<=19)&&(c>=13 && c<=19)&&(d>=13 && d<=19)){return false}
                                                                                           ^countTeen:6: error: type mismatch;
 found   : Boolean(true)
 required: Int
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)||(c>=13 && c<=19)||(d>=13 && d<=19)){return true}
                                                                                           ^countTeen:7: error: type mismatch;
 found   : Boolean(true)
 required: Int
	if ((a>=13 && a<=19)||(b>=13 && b<=19)||(c>=13 && c<=19)&&(d>=13 && d<=19)){return true}
                                                                                           ^countTeen:8: error: type mismatch;
 found   : Boolean(true)
 required: Int
	if ((a>=13 && a<=19)||(b>=13 && b<=19)&&(c>=13 && c<=19)||(d>=13 && d<=19)){return true}
                                                                                           ^countTeen:9: error: type mismatch;
 found   : Boolean(false)
 required: Int
	if ((a>=13 && a<=19)||(b>=13 && b<=19)||(c>=13 && c<=19)||(d>=13 && d<=19)){return false}
                                                                                           ^countTeen:9: error: type mismatch;
 found   : Unit
 required: Int
	if ((a>=13 && a<=19)||(b>=13 && b<=19)||(c>=13 && c<=19)||(d>=13 && d<=19)){return false}
        ^